--- a/.scribe/endpoints.cache/00.yaml
+++ b/.scribe/endpoints.cache/00.yaml
@@ -42,6 +42,15 @@ endpoints:
         enumValues: []
         exampleWasSpecified: true
         custom: []
+      phone:
+        name: phone
+        description: 'The phone of the user.'
+        required: true
+        example: '+38087659800'
+        type: numeric
+        enumValues: []
+        exampleWasSpecified: true
+        custom: []
       password:
         name: password
         description: 'The password of the user.'
@@ -60,20 +69,14 @@ endpoints:
         enumValues: []
         exampleWasSpecified: true
         custom: []
-      phone:
-        name: phone
-        description: 'The phone of the user.'
-        required: true
-        example: '+38087659800'
-        type: numeric
-        enumValues: []
-        exampleWasSpecified: true
-        custom: []
       password_confirmation:
         name: password_confirmation
         description: 'The confirmation password. The exactly same as password.'
         required: true
-        example: adjan213bb134
+        example: |-
+          adjan213bb134
+
+          <b>email</b> and <b>phone</b> has to be unique (nobody had to use this before) otherwise you get error message.
         type: string
         enumValues: []
         exampleWasSpecified: true
@@ -81,10 +84,13 @@ endpoints:
     cleanBodyParameters:
       name: Jon
       email: user@example.com
+      phone: '+38087659800'
       password: adjan213bb134
       surname: Gates
-      phone: '+38087659800'
-      password_confirmation: adjan213bb134
+      password_confirmation: |-
+        adjan213bb134
+
+        <b>email</b> and <b>phone</b> has to be unique (nobody had to use this before) otherwise you get error message.
     fileParameters: []
     responses:
       -
@@ -93,6 +99,23 @@ endpoints:
           {
             "message": "User registered successfully"
            }
+        headers: []
+        description: ''
+        custom: []
+      -
+        status: 200
+        content: |-
+          {
+                     "message": "The email you gave, has already been taken. (and 1 more error)",
+                     "errors": {
+                     "email": [
+                      "The email you gave, has already been taken."
+                      ],
+                     "phone": [
+                     "The phone you gave, has already been taken."
+                      ]
+                      }
+                    }
         headers: []
         description: ''
         custom: []
@@ -229,7 +252,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: tommie49@example.net
+        example: mwiza@example.net
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -238,14 +261,14 @@ endpoints:
         name: password
         description: ''
         required: true
-        example: asperiores
+        example: culpa
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      email: tommie49@example.net
-      password: asperiores
+      email: mwiza@example.net
+      password: culpa
     fileParameters: []
     responses: []
     responseFields: []
